# AlphaEdge

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/alphaedge/: config.py  db.py  run_id.py
backend/alphaedge/api/: app.py
backend/alphaedge/api/routes/: __init__.py  analysis.py  health.py  report.py  snapshot.py
backend/alphaedge/data_ingestion/: base.py  cache_manager.py  edgar_source.py  news_source.py  yfinance_source.py
backend/alphaedge/forecasting/: accuracy_tracker.py  arima_forecaster.py  base.py  cnn_forecaster.py  dl_common.py  ensemble.py  ets_forecaster.py  gnn_forecaster.py  horizons.py  transformer_forecaster.py  walk_forward.py  xgboost_forecaster.py
backend/alphaedge/fundamentals/: comps_engine.py  dcf_engine.py  financial_statements.py  investment_thesis.py  valuation_summary.py
backend/alphaedge/news_nlp/: event_detection.py  llm_hook.py  sentiment.py  synthesizer.py
backend/alphaedge/quant/: __init__.py  alpha_intelligence.py  correlation.py  mean_reversion.py  momentum_signals.py  monte_carlo.py  performance_metrics.py  return_analysis.py  signal_backtest.py  volatility_forecast.py
backend/alphaedge/reporting/: pitch_deck.py  report_generator.py
backend/alphaedge/risk/: drawdown.py  event_calendar.py  scenario_analysis.py  var_calculator.py
backend/alphaedge/technicals/: confluence.py  divergence.py  factor_model.py  feature_store.py  ichimoku.py  indicators.py  regime_detection.py  relative_strength.py  support_resistance.py  volume_profile.py
frontend/: package.json  (+2 more)
(+25 files in other folders)
