[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaedge"
version = "0.1.0"
description = "Investment-grade analysis platform: valuation, technicals, forecasting, news"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    # Web framework
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Data sources
    "yfinance>=0.2.31",
    "httpx>=0.25",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",

    # Data processing
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",

    # ML / Stats
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "xgboost>=2.0",
    "lightgbm>=4.1",
    "hmmlearn>=0.3",

    # Reporting / Charts
    "matplotlib>=3.7",
    "jinja2>=3.1",

    # Caching
    "diskcache>=5.6",
]

[project.optional-dependencies]
gpu = [
    # Heavy deps — install locally with: pip install .[gpu]
    "torch>=2.1",
    "transformers>=4.35",
    "spacy>=3.7",
]
db = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.12",
    "redis>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio>=0.21",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["alphaedge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
